--- a/index.html
+++ b/index.html
@@ -6,33 +6,29 @@
 	<link rel="profile" href="http://gmpg.org/xfn/11" />
 	<meta name="viewport" content="width=device-width; initial-scale=1"/>
 	<link rel="stylesheet" type="text/css" media="all" href="style.css" />
-
 </head>
 
 <body>
 
-<ul class="accordion">
-	<li class="">
-		<input class="accordion-toggle" type="checkbox" checked="">
-		<h3 class="light caps">Accordion 1</h3>
-		<div class="accordion-section">
+<div class="accordion">
+	<div class="accordion-section">
+		<input class="accordion-toggle" type="checkbox"> <h3>Accordion 1</h3>
+		<div class="accordion-content">
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</div><!--.accordion-section.read-section-->
-	</li>
-	<li class="">
-		<input class="accordion-toggle" type="checkbox" checked="">
-		<h3 class="light caps">Accordion 2</h3>
-		<div class="accordion-section">
+		</div><!--.accordion-content-->
+	</div>
+	<div class="accordion-section">
+		<input class="accordion-toggle" type="checkbox" checked> <h3>Accordion 2</h3>
+		<div class="accordion-content">
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</div><!--.accordion-section.read-section-->
-	</li>
-	<li class="">
-		<input class="accordion-toggle" type="checkbox" checked="">
-		<h3 class="light caps">Accordion 3</h3>
-		<div class="accordion-section">
+		</div><!--.accordion-content-->
+	</div>
+	<div class="accordion-section">
+		<input class="accordion-toggle" type="checkbox" checked> <h3>Accordion 3</h3>
+		<div class="accordion-content">
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</div><!--.accordion-section.read-section-->
-	</li>
-</ul>
+		</div><!--.accordion-content-->
+	</div>
+</div>
 
 </body></html>
